# cpp_lab2

./: Array.cpp  Array.h  CMakeLists.txt  Main.cpp  main.cpp
include/: Array.h  ArrayTest.h
src/: ArrayTest.cpp  Main.cpp
tests/: ArrayTest.cpp
